# OOP

./: README.md
Practic_Studenti/: CMakeLists.txt  main.cpp
Practic_Studenti/headers/: GUI.h  Model.h  Repository.h  Service.h  Student.h  Tester.h  Undo_Redo.h
Practic_Studenti/sources/: GUI.cpp  Repository.cpp  Service.cpp  Student.cpp  Tester.cpp  Undo_Redo.cpp
TicTacToe/: CMakeLists.txt  GUI.cpp  GUI.h  Game.cpp  Game.h  Model.cpp  Model.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Tester.cpp  Tester.h  Validator.cpp  Validator.h  main.cpp
